add div in html file.

--- a/P3_design_mockup_portfolio/index.html
+++ b/P3_design_mockup_portfolio/index.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+    <div>test git hub.</div>
     <div id="mainpage" class="grid">
         <!--header 内容，logo使用svg格式-->
         <header class="site-header row">
